# chicago-elections-archive

./: .eleventy.js  .env.sample  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  rollup.config.mjs  tailwind.config.js  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
input/: metadata.json  results-metadata.json
output/: results-metadata.json
scripts/: process_1983.py  process_results_metadata.py  scrape_cook_2022_primary.py  scrape_results_metadata.py  scrape_table.py
site/: 404.njk  about.md  about.njk  download.njk  embed.njk  index.njk  manifest.json.njk  robots.txt.njk  style.11ty.js
site/_data/: site.js
site/_includes/: analytics.njk  assets.njk  footer.njk  metadata.njk  nav.njk  webpack.html
site/_layouts/: base.njk  embed.njk
site/elections/: 2020-general.njk  2022-democratic-primary.njk  2022-republican-primary.njk  2023-municipal-general.njk  2023-municipal-runoff.njk
src/css/: base.css  content.css  download.css  form.css  map.css  nav.css  style.css
src/js/: download.js  embed.js  entry.js  index.js  main.js  map.js  utils.js
src/js/components/: geocoder.js  legend.js  map.js  popup-content.js  popup.js  search-icon.js
src/js/contexts/: map.js
src/js/pages/: download-page.js  map-page.js
src/js/providers/: map.js  popup.js
src/js/utils/: data.js  index.js  map.js
