[tool.poetry]
name = "chicago-elections-archive"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
csvkit = "^1.0.7"
esridump = "^1.11.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | __pycache__
  | build
  | coverage
  | dist
)/
'''

[tool.isort]
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_first_party = ["scrapy_wayback_middleware"]
skip_glob = [
  "*/.venv/*",
  "*/.pytest_cache/*",
  "*/dist/*",
  "*/build/*",
]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
